[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "cairo_vm_rs_py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["maturin>=1.7.8", "pip>=24.3.1", "pytest>=8.3.4"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "cairo_vm_rs_py"
manifest-path = "Cargo.toml"
